[#1564] Auto-detect the right version vor the dialect